completed up until offences

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -20,9 +20,11 @@
 
 
 
-// .govuk-width-container {
-//     max-width: 1280px;
-// }
+.govuk-width-container, .moj-header__container {
+    max-width: 1280px;
+}
+
+
 
 // @media only screen and (min-width: 1020px) {
 // .govuk-width-container {
@@ -44,19 +46,17 @@
     color: govuk-colour("red");
 }
 
-.search-container {
-  display: flex;
-  align-items: flex-end; /* Aligns items to the end of the container vertically */
-  gap: 10px; /* Creates space between the input and the button */
-}
+// @media (min-width: 40.0625em) {
 
-.search-input {
-  flex-grow: 1; /* Allows the input to grow and fill available space */
-  margin-right: 10px; /* Ensures there is space between the input and the button */
-}
+// .search-container {
+//   display: flex;
+//   align-items: flex-end; /* Aligns items to the end of the container vertically */
+//   gap: 10px; /* Creates space between the input and the button */
+// }
 
-@media (min-width: 40.0625em) {
-  .govuk-form-group .search-input {
-      width: 100% !important;
-  }
-}
+// .search-input {
+//   flex-grow: 1; /* Allows the input to grow and fill available space */
+//   margin-right: 10px; /* Ensures there is space between the input and the button */
+// }
+
+// }
