--- a/app/views/create-account/offence-list.html
+++ b/app/views/create-account/offence-list.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Search offences" %}
+{% set pageName = "Find offence" %}
 
 {% block beforeContent %}
 
@@ -19,7 +19,7 @@
         <div class="search-container">
           <div class="govuk-form-group" style="width: 100% !important;">
             <h1 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--m  search-input" for="searchOffence">
+              <label class="govuk-label govuk-label--s  search-input" for="searchOffence">
                 Search by offence code, title, act or section
               </label>
             </h1>
