--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -7,7 +7,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 
 {% block header %}
 {{ mojHeader({
-    navigationClasses: 'govuk-page-width',
+    navigationClasses: 'govuk-width-container',
     organisationLabel: {
       text: 'HMCTS',
       href: '../index.html'
