--- a/app/views/create-account/company-details.html
+++ b/app/views/create-account/company-details.html
@@ -4,17 +4,17 @@
 
 {% block beforeContent %}
 
-<a href="defendant-type.html" class="govuk-back-link">Back</a>
+<a href="task-list.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-one-half">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="contact-details?cdCompleted=true">
+      <form method="post" novalidate action="task-list?cdCompleted=true">
 
         <!-- COMPANY NAME -->
         <div>
@@ -143,7 +143,7 @@
 
         
         {{ govukButton({
-          text: "Return to task list"
+          text: "Save and return to tasks"
         }) }}
 
       </form>
