--- a/app/views/create-account/contact-preferences.html
+++ b/app/views/create-account/contact-preferences.html
@@ -12,7 +12,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-one-half">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
       <form method="post" novalidate action="task-list?cpCompleted=true">
@@ -113,9 +113,12 @@
           value: data['carRegistration']
         }) }}
 
+
+        {% if data['businessUnit'] == "Gwent" %}
+
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-m">Language preference</h2>
+        <!-- <h2 class="govuk-heading-m">Language preference</h2> -->
 
         <!-- <p class="govuk-body">The default language for Gwent accounts is Welsh and English.</p> -->
 
@@ -126,7 +129,7 @@
           fieldset: {
             legend: {
               text: "Document language",
-              classes: "govuk-fieldset__legend--s"
+              classes: "govuk-fieldset__legend--m"
             }
           },
           items: [
@@ -148,7 +151,7 @@
           fieldset: {
             legend: {
               text: "Court hearing language",
-              classes: "govuk-fieldset__legend--s"
+              classes: "govuk-fieldset__legend--m"
             }
           },
           items: [
@@ -163,6 +166,7 @@
           ]
         }) }}
 
+       {% endif %}   
         <!-- WELSH -->
 
         <!-- {% if (data['defendantType'] == "defendant-individual") %}
@@ -270,7 +274,7 @@
         </div> -->
         
         {{ govukButton({
-          text: "Return to task list"
+          text: "Save and return to tasks"
         }) }}
 
       </form>
