--- a/app/views/create-account/court-details.html
+++ b/app/views/create-account/court-details.html
@@ -11,7 +11,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-one-half">
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
@@ -127,11 +127,8 @@
 
         {{ govukInput({
           label: {
-              text: "Case or court reference",
+              text: "Prosecutor Court Reference (PCR)",
               classes: "govuk-label--s"
-          },
-          hint: {
-              text: "Prosecutor Court Reference (PCR)"
           },
           classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           id: "ljaReferenceCode",
@@ -206,7 +203,7 @@
 
 
         {{ govukButton({
-          text: "Return to task list"
+          text: "Save and return to tasks"
         }) }}
 
       </form>
