--- a/app/views/create-account/employer-details.html
+++ b/app/views/create-account/employer-details.html
@@ -11,7 +11,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-one-half">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
       <form method="post" novalidate action="task-list?edCompleted=true">
@@ -147,7 +147,7 @@
         {% endcall %}
         
         {{ govukButton({
-          text: "Return to task list"
+          text: "Save and return to tasks"
         }) }}
 
       </form>
