--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -11,7 +11,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-one-half">
       
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
@@ -267,7 +267,7 @@
 
         
         {{ govukButton({
-          text: "Return to task list"
+          text: "Save and return to tasks"
         }) }}
 
       </form>
