--- a/app/views/create-account/contact-preferences.html
+++ b/app/views/create-account/contact-preferences.html
@@ -116,11 +116,7 @@
 
         {% if data['businessUnit'] == "Gwent" %}
 
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-        <!-- <h2 class="govuk-heading-m">Language preference</h2> -->
-
-        <!-- <p class="govuk-body">The default language for Gwent accounts is Welsh and English.</p> -->
+        <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
         {{ govukRadios({
           name: "documentLanguage",
@@ -166,112 +162,8 @@
           ]
         }) }}
 
-       {% endif %}   
-        <!-- WELSH -->
-
-        <!-- {% if (data['defendantType'] == "defendant-individual") %}
-
-        <div>
-
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-          {{ govukRadios({
-            name: "documentLanguage",
-            value: data['documentLanguage'],
-            classes: "govuk-radios--inline",
-            fieldset: {
-              legend: {
-                text: "What is the required language for documents to be sent  out?",
-                classes: "govuk-fieldset__legend--m"
-              }
-            },
-            items: [
-              {
-                value: "english",
-                text: "English"
-              },
-              {
-                value: "welsh",
-                text: "Welsh"
-              }
-            ]
-          }) }}
-  
-          {{ govukRadios({
-            name: "hearingLanguage",
-            value: data['hearingLanguage'],
-            classes: "govuk-radios--inline",
-            fieldset: {
-              legend: {
-                text: "In which language should court hearings be conducted?",
-                classes: "govuk-fieldset__legend--m"
-              }
-            },
-            items: [
-              {
-                value: "english",
-                text: "English"
-              },
-              {
-                value: "welsh",
-                text: "Welsh"
-              }
-            ]
-          }) }}
-
-        {% endif %}
-
-        {% if (data['defendantType'] == "defendant-company") %}
-
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-          {{ govukRadios({
-            name: "documentLanguage",
-            value: data['documentLanguage'],
-            classes: "govuk-radios--inline",
-            fieldset: {
-              legend: {
-                text: "What is the required language for documents to be sent  out?",
-                classes: "govuk-fieldset__legend--m"
-              }
-            },
-            items: [
-              {
-                value: "english",
-                text: "English"
-              },
-              {
-                value: "welsh",
-                text: "Welsh"
-              }
-            ]
-          }) }}
-  
-          {{ govukRadios({
-            name: "hearingLanguage",
-            value: data['hearingLanguage'],
-            classes: "govuk-radios--inline",
-            fieldset: {
-              legend: {
-                text: "In which language should court hearings be conducted?",
-                classes: "govuk-fieldset__legend--m"
-              }
-            },
-            items: [
-              {
-                value: "english",
-                text: "English"
-              },
-              {
-                value: "welsh",
-                text: "Welsh"
-              }
-            ]
-          }) }}
-
-        {% endif %}
-
-        </div> -->
+       {% endif %}    -->
+        
         
         {{ govukButton({
           text: "Save and return to tasks"
