--- a/app/views/create-account/company-details.html
+++ b/app/views/create-account/company-details.html
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-one-half">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="task-list?cdCompleted=true">
+      <form method="post" novalidate action="task-list?codCompleted=true">
 
         <!-- COMPANY NAME -->
         <div>
