--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -18,15 +18,13 @@
 //     font-family: "Roboto", arial, sans-serif;
 // }
 
+// .govuk-width-container {
+//     min-width: 1280px;
+//     max-width: 1400px;
+// }
 
 
-.govuk-width-container, .moj-header__container {
-    max-width: 1280px;
-}
-
-
-
-// @media only screen and (min-width: 1020px) {
+// @media only screen and (min-width: 1280px) {
 // .govuk-width-container {
 //     margin-right: 30px;
 //     margin-left: 30px;
