--- a/app/views/create-account/contact-preferences.html
+++ b/app/views/create-account/contact-preferences.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Heading" %}
+{% set pageName = "Contact details" %}
 
 {% block beforeContent %}
 
@@ -19,8 +19,6 @@
 
         <!-- EMAILS -->
         
-        <h2 class="govuk-heading-m">Contact details</h2>
-
         {{ govukInput({
           label: {
             text: "Primary email address",
@@ -88,31 +86,6 @@
           classes: "govuk-input--width-20"
         }) }}
 
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-        <h2 class="govuk-heading-m">Vehicle details</h2>
-
-        {{ govukInput({
-          label: {
-            text: "Make of the car",
-            classes: "govuk-label--s"
-          },
-          id: "carMake",
-          name: "carMake",
-          value: data['carMake']
-        }) }}
-
-        {{ govukInput({
-          label: {
-            text: "Registration number",
-            classes: "govuk-label--s"
-          },
-          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
-          id: "carRegistration",
-          name: "carRegistration",
-          value: data['carRegistration']
-        }) }}
-
 
         {% if data['businessUnit'] == "Gwent" %}
 
@@ -160,9 +133,9 @@
               text: "Welsh and English"
             }
           ]
-        }) }}
+        }) }} -->
 
-       {% endif %}    -->
+       {% endif %}
         
         
         {{ govukButton({
