--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -238,6 +238,30 @@
         
         {% endcall %}
 
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+        <h2 class="govuk-heading-m">Vehicle details</h2>
+
+        {{ govukInput({
+          label: {
+            text: "Make of the car",
+            classes: "govuk-label--s"
+          },
+          id: "carMake",
+          name: "carMake",
+          value: data['carMake']
+        }) }}
+
+        {{ govukInput({
+          label: {
+            text: "Registration number",
+            classes: "govuk-label--s"
+          },
+          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
+          id: "carRegistration",
+          name: "carRegistration",
+          value: data['carRegistration']
+        }) }}
 
         <!-- VEHICLE DETAILS -->
         <!-- <div>
