--- a/app/views/create-account/task-list.html
+++ b/app/views/create-account/task-list.html
@@ -16,14 +16,34 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-two-thirds">
+
+    
+    <!-- <p class="govuk-body govuk-!-margin-bottom-6">Document and hearing language are in <a class="govuk-link--no-visited-state" href="#">Welsh and English</a>.</p> -->
+    {% if data['businessUnit'] == "Gwent" %}
 
     <span class="govuk-caption-l">{{ data['businessUnit'] or "Bedfordshire" }}</span>
     <h1 class="govuk-heading-l ">{{ pageName }}</h1>
 
-    <!-- <p class="govuk-body">Account in Gwent will default to Welsh and English unless changed.</p>
+    <!-- class="govuk-!-margin-bottom-6" style="background-color: #EEEFEF; padding: 15px;" -->
+    <!-- <div >
+      <p class="govuk-body-s govuk-!-margin-bottom-2"><strong><a class="govuk-link--no-visited-state" href="#">Language preference</strong></a></p>
+      <p class="govuk-body govuk-!-margin-bottom-2">Document language: Welsh and English<a class="govuk-link--no-visited-state" href="#"></a></p>
+      <p class="govuk-body govuk-!-margin-bottom-2">Court hearing language: Welsh and English<a class="govuk-link--no-visited-state" href="#"></a></p>
+      <p class="govuk-body govuk-!-margin-bottom-6"><a class="govuk-link--no-visited-state" href="#">Change</a></p>
+    </div> -->
 
-    <details class="govuk-details govuk-!-margin-bottom-8">
+    {% else %}
+
+    <span class="govuk-caption-l">{{ data['businessUnit'] or "Bedfordshire" }}</span>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">{{ pageName }}</h1>
+
+    {% endif %}
+
+    
+
+
+    <!-- <details class="govuk-details govuk-!-margin-bottom-8">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
           Change language preference
@@ -81,7 +101,7 @@
 </div>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-one-half">
+  <div class="govuk-grid-column-two-thirds">
 
 
 
@@ -96,12 +116,15 @@
         }
       } %}
 
-      <!-- STATUSES FOR COURT DETAILS -->
+      <!-- COURT DETAILS -->
 
       {% if (data['cdCompleted'] == "true") %}
 
           {% set cdStatusTag = {
-            text: "Completed"
+            tag: {
+              text: "Completed",
+              classes: "govuk-tag--blue"
+            }
           } %}
           
         {% else %}
@@ -109,7 +132,7 @@
           {% set cdStatusTag = {
             tag: {
               text: "Not provided",
-              classes: "govuk-tag--blue"
+              classes: "govuk-tag--grey"
             }
           } %}
       
@@ -120,7 +143,10 @@
       {% if (data['pdCompleted'] == "true") %}
 
           {% set pdStatusTag = {
-            text: "Completed"
+            tag: {
+              text: "Completed",
+              classes: "govuk-tag--blue"
+            }
           } %}
           
         {% else %}
@@ -128,7 +154,7 @@
           {% set pdStatusTag = {
             tag: {
               text: "Not provided",
-              classes: "govuk-tag--blue"
+              classes: "govuk-tag--grey"
             }
           } %}
       
@@ -136,18 +162,21 @@
 
       <!-- COMPANY DETAILS -->
 
-      {% if (data['cdCompleted'] == "true") %}
+      {% if (data['codCompleted'] == "true") %}
 
-          {% set cdStatusTag = {
-            text: "Completed"
+          {% set codStatusTag = {
+            tag: {
+              text: "Completed",
+              classes: "govuk-tag--blue"
+            }
           } %}
           
         {% else %}
 
-          {% set cdStatusTag = {
+          {% set codStatusTag = {
             tag: {
               text: "Not provided",
-              classes: "govuk-tag--blue"
+              classes: "govuk-tag--grey"
             }
           } %}
       
@@ -158,7 +187,10 @@
       {% if (data['cpCompleted'] == "true") %}
 
           {% set cpStatusTag = {
-            text: "Completed"
+            tag: {
+              text: "Completed",
+              classes: "govuk-tag--blue"
+            }
           } %}
           
         {% else %}
@@ -166,7 +198,7 @@
           {% set cpStatusTag = {
             tag: {
               text: "Not provided",
-              classes: "govuk-tag--blue"
+              classes: "govuk-tag--grey"
             }
           } %}
       
@@ -177,7 +209,10 @@
         {% if (data['edCompleted'] == "true") %}
 
         {% set edStatusTag = {
-          text: "Completed"
+          tag: {
+            text: "Completed",
+            classes: "govuk-tag--blue"
+          }
         } %}
         
       {% else %}
@@ -185,7 +220,7 @@
         {% set edStatusTag = {
           tag: {
             text: "Not provided",
-            classes: "govuk-tag--blue"
+            classes: "govuk-tag--grey"
           }
         } %}
       
@@ -196,7 +231,10 @@
         {% if (data['pgdCompleted'] == "true") %}
 
         {% set pgdStatusTag = {
-          text: "Completed"
+          tag: {
+            text: "Completed",
+            classes: "govuk-tag--blue"
+          }
         } %}
         
       {% else %}
@@ -204,7 +242,7 @@
         {% set pgdStatusTag = {
           tag: {
             text: "Not provided",
-            classes: "govuk-tag--blue"
+            classes: "govuk-tag--grey"
           }
         } %}
       
@@ -215,7 +253,10 @@
         {% if (data['lpCompleted'] == "true") %}
 
         {% set lpStatusTag = {
-          text: "Completed"
+          tag: {
+            text: "Completed",
+            classes: "govuk-tag--blue"
+          }
         } %}
         
       {% else %}
@@ -223,7 +264,7 @@
         {% set lpStatusTag = {
           tag: {
             text: "Not provided",
-            classes: "govuk-tag--blue"
+            classes: "govuk-tag--grey"
           }
         } %}
       
@@ -234,7 +275,10 @@
       {% if (data['ofdCompleted'] == "true") %}
 
           {% set ofdStatusTag = {
-            text: "Completed"
+            tag: {
+              text: "Completed",
+              classes: "govuk-tag--blue"
+            }
           } %}
           
         {% else %}
@@ -242,7 +286,7 @@
           {% set ofdStatusTag = {
             tag: {
               text: "Not provided",
-              classes: "govuk-tag--blue"
+              classes: "govuk-tag--grey"
             }
           } %}
       
@@ -253,7 +297,10 @@
       {% if (data['ptCompleted'] == "true") %}
 
           {% set ptStatusTag = {
-            text: "Completed"
+            tag: {
+              text: "Completed",
+              classes: "govuk-tag--blue"
+            }
           } %}
           
         {% else %}
@@ -261,7 +308,7 @@
           {% set ptStatusTag = {
             tag: {
               text: "Not provided",
-              classes: "govuk-tag--blue"
+              classes: "govuk-tag--grey"
             }
           } %}
       
@@ -333,11 +380,11 @@
             classes: "govuk-link--no-visited-state"
           },
           href: 'company-details',
-          status: cdStatusTag
+          status: codStatusTag
         } if data['defendantType'] == 'Company',
         {
           title: {
-            text: "Task item",
+            text: "Contact details",
             classes: "govuk-link--no-visited-state"
           },
           href: "contact-preferences",
@@ -364,6 +411,7 @@
             text: "Offence details",
             classes: "govuk-link--no-visited-state"
           },
+          datamodule: "edge",
           href: '#',
           status: ofdStatusTag
         },
@@ -398,68 +446,64 @@
 
     <p class="govuk-body">Check that all required fields have been entered before you publish.</p>
 
-    <div class="">
+    <div class="" data-module="edge">
       {{ govukButton({ text: "Review account", href: "#" }) }}
     </div>
 
-    <p class="govuk-body govuk-!-margin-top-2"><a href="#" class="govuk-link app-destructive-link">Delete account</a></p>
+    <p data-module="edge" class="govuk-body govuk-!-margin-top-2"><a href="#" class="govuk-link app-destructive-link">Delete account</a></p>
 
   </div> 
 
-  <!-- <div class="govuk-grid-column-one-third" >
-    <div style="padding: 15px 15px 5px 15px; background-color: #F3F2F1;">
-    <h2 class="govuk-heading-s">Language preference</h2>
 
-    <p class="govuk-body govuk-!-margin-bottom-2">Documents: <strong>Welsh and English</strong></p>
-    <p class="govuk-body">Court hearing: <strong>Welsh and English</strong></p>
+  {% if data['businessUnit'] == "Gwent" %}
 
-    <p class="govuk-body"><a href="#" class="govuk-link--no-visited-state">Change</a></p>
+  <div class="govuk-grid-column-one-third" >
+    <div class="x-govuk-related-navigation">
+      <nav class="x-govuk-related-navigation__nav-section" role="navigation" aria-labelledby="related-navigation-related-content">
+        <h2 class="x-govuk-related-navigation__main-heading" id="related-navigation-related-content">
+          Heading
+        </h2>
+        <p class="govuk-body-s govuk-!-margin-bottom-2"><strong>Documents</strong>: Welsh and English</p>
+        <p class="govuk-body-s govuk-!-margin-bottom-2"><strong>Court hearing</strong>: Welsh and English</p>
 
-    {{ govukRadios({
-      name: "documentLanguage",
-      classes: "govuk-radios--small ",
-      fieldset: {
-        legend: {
-          text: "Documents",
-          classes: "govuk-fieldset__legend--xs"
-        }
-      },
-      value: data['documentLanguage'],
-      items: [
-        {
-          value: "English only",
-          text: "English only"
-        },
-        {
-          value: "Welsh and English",
-          text: "Welsh and English"
-        }
-      ]
-    }) }}
+        <p class="govuk-body-s" data-module="edge">
+          <a  class="govuk-link--no-visited-state" href="#">Change</a>
+        </p>
 
-    {{ govukRadios({
-      name: "hearingLanguage",
-      classes: "govuk-radios--small govuk-!-margin-bottom-0",
-      fieldset: {
-        legend: {
-          text: "Court hearings",
-          classes: "govuk-fieldset__legend--xs"
-        }
-      },
-      value: data['hearingLanguage'],
-      items: [
-        {
-          value: "English only",
-          text: "English only"
-        },
-        {
-          value: "Welsh and English",
-          text: "Welsh and English"
-        }
-      ]
-    }) }}
+
+        <!-- <ul class="x-govuk-related-navigation__link-list">
+          <li class="x-govuk-related-navigation__link">
+            <a class="govuk-link x-govuk-related-navigation__section-link x-govuk-related-navigation__section-link--other" href="/school-performance-tables">Find and compare schools in England</a>
+          </li>
+          <li class="x-govuk-related-navigation__link">
+            <a class="govuk-link x-govuk-related-navigation__section-link x-govuk-related-navigation__section-link--other" href="/types-of-school">Types of school</a>
+          </li>
+        </ul> -->
+        <!-- <nav role="navigation" class="x-govuk-related-navigation__nav-section" aria-labelledby="related-navigation-explore-the-topic">
+          <h3 class="x-govuk-related-navigation__sub-heading" id="related-navigation-explore-the-topic">
+            Explore the topic
+          </h3>
+          <ul class="x-govuk-related-navigation__link-list">
+            <li class="x-govuk-related-navigation__link">
+              <a class="govuk-link x-govuk-related-navigation__section-link" href="/browse/education/school-life">Schools and curriculum</a>
+            </li>
+          </ul>
+        </nav> -->
+      </nav>
     </div>
-  </div> -->
+
+    <!-- <div style="border-top: 2px solid #1D70B8;">
+    <p class="govuk-body-s govuk-!-margin-top-3"><strong>Language preference</strong></p>
+
+    <p class="govuk-body-s govuk-!-margin-bottom-2">Documents: <strong>Welsh and English</strong></p>
+    <p class="govuk-body-s  govuk-!-margin-bottom-2">Court hearing: <strong>Welsh and English</strong></p>
+
+    <p class="govuk-body-s govuk-!-margin-bottom-0"><a href="#" class="govuk-link--no-visited-state">Change</a></p>
+
+    </div> -->
+  </div>
+
+  {% endif %}
 
 </div>
 {% endblock %}
