--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -31,6 +31,11 @@
 // }
 // }
 
+.moj-header__container {
+  max-width: 1280px;
+}
+
+
 .app-destructive-link {
     &.govuk-link {
       color: govuk-colour("red");
